Chapter_5/kubia-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubia
spec:
  rules:
    - host: kubia.example.com
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kubia-nodeport
              port:
                number: 80
